@@ -82,6 +82,10 @@ version 2.86
 	Make domains generated by --synth-domain appear in replies
 	when in authoritative mode.
 
+	Ensure CAP_NET_ADMIN capability is available when
+	conntrack is configured. Thanks to Yick Xie for spotting
+	the lack of this.
+
 	
 version 2.85
         Fix problem with DNS retries in 2.83/2.84.
